fixed genre cell text-align

--- a/assets/styles/layout.scss
+++ b/assets/styles/layout.scss
@@ -851,11 +851,10 @@ table.form {
                 text-align: center;
             }
 
-            td:nth-child(7) {
+            td:nth-child(7), td:nth-child(8) {
                 text-align: center;
                 display: none;
             }
-            td:nth-child(8) { display: none; }
         }
     }
 
